feat: Integrate backend services and improve UI
This commit introduces significant backend infrastructure and frontend enhancements for NexusChat.

Key changes include:
- **Backend Setup**: Integration of Supabase for database management and Cloudflare R2 for media storage. This includes setting up necessary AWS SDK clients and configuring environment variables.
- **Real-time Communication**: Implementation of Socket.IO for real-time messaging and presence updates, leveraging Supabase for user status management.
- **API Endpoints**: Establishment of basic Express.js routes for handling server-side logic.
- **Frontend Enhancements**: Addition of login/registration forms, account management options (logout, delete account), and dependency updates for various client libraries.

These changes lay the foundation for robust real-time features and secure data handling within the application.

--- a/index.html
+++ b/index.html
@@ -243,7 +243,15 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.87.1",
+    "dotenv": "https://esm.sh/dotenv@^17.2.3",
+    "@aws-sdk/client-s3": "https://esm.sh/@aws-sdk/client-s3@^3.948.0",
+    "@aws-sdk/s3-request-presigner": "https://esm.sh/@aws-sdk/s3-request-presigner@^3.948.0",
+    "express": "https://esm.sh/express@^5.2.1",
+    "http": "https://esm.sh/http@^0.0.1-security",
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "socket.io": "https://esm.sh/socket.io@^4.8.1"
   }
 }
 </script>
