feat: Implement Socket.io for real-time communication
Integrates Socket.io for real-time messaging, typing indicators, and call signaling.

Introduces `socketService` to manage connections and event emissions.
Updates `ChatWindow` to handle sending/receiving messages and typing events.
Adds `socket.io-client` dependency.
Includes initial backend DTO mapping for messages.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
     "express": "https://esm.sh/express@^5.2.1",
     "http": "https://esm.sh/http@^0.0.1-security",
     "cors": "https://esm.sh/cors@^2.8.5",
-    "socket.io": "https://esm.sh/socket.io@^4.8.1"
+    "socket.io": "https://esm.sh/socket.io@^4.8.1",
+    "socket.io-client": "https://esm.sh/socket.io-client@^4.8.1"
   }
 }
 </script>
